# RAS-SES-598-Space-Robotics-and-AI

assignments/cart_pole_optimal_control/: README.md  setup.py
assignments/cart_pole_optimal_control/cart_pole_optimal_control/: data_logger.py  lqr_controller.py
assignments/cart_pole_optimal_control/data/: case1.csv  case2.csv  case3.csv  case4.csv  case5.csv  plotting.py
assignments/cart_pole_optimal_control/data/myenv/: pyvenv.cfg
assignments/first_order_boustrophedon_navigator/: README.md  package.xml
assignments/first_order_boustrophedon_navigator/first_order_boustrophedon_navigator/: boustrophedon_controller.py
assignments/first_order_boustrophedon_navigator/metrics_interfaces/: CMakeLists.txt  package.xml
assignments/first_order_boustrophedon_navigator/metrics_interfaces/msg/: PerformanceMetrics.msg
assignments/terrain_mapping_drone_control/: CMakeLists.txt  README.md  package.xml  setup.py
assignments/terrain_mapping_drone_control/launch/: aruco_landing_launch.py  cylinder_landing.launch.py  rtabmap.launch.py
assignments/terrain_mapping_drone_control/msg/: DroneCommand.msg
assignments/terrain_mapping_drone_control/scripts/: drone_controller.py  mission_planner.py
assignments/terrain_mapping_drone_control/terrain_mapping_drone_control/: aruco_landing_controller.py  aruco_lawnmower_landing.py  landing_client.py  spiral_trajectory.py
